Fix side effects of fix for long one-word titles.
Changing the overflow to keep one-word titles from overflowing the box caused typeahead's drop-down to disappear. This fixes that, as well as the overflowing of typeahead's drop-down menu with those titles. https://github.com/CenterForOpenScience/openscienceframework.org/issues/948

--- a/website/static/css/projectorganizer.css
+++ b/website/static/css/projectorganizer.css
@@ -119,7 +119,7 @@ div.project-details {
     position: fixed;
     z-index: 9999999;
     display: none;
-    overflow: auto;
+    overflow: visible;
 
     padding: 1px;
     text-align: left;
@@ -134,6 +134,9 @@ div.project-details {
 
 }
 
+div.project-details span.title {
+    overflow-x: hidden;
+}
 
 .organize-project-controls {
     z-index: 11;
@@ -147,7 +150,7 @@ div.organize-project-controls {
     margin-top: 10px;
 }
 
-.organize-project-controls .organize-btn.btn.btn-default {
+.organize-project-controls .organizeBtn.btn.btn-default {
     display: block;
     margin-right: 10px;
     float: left;
@@ -166,16 +169,13 @@ input.typeahead{
 
 }
 
-.organizer-legend {
-    display: inline-block;
-}
-
 /* Typeahead scaffolding */
 /* ----------- */
 
 .tt-dropdown-menu,
 .gist {
     text-align: left;
+    overflow-x: hidden;
 }
 
 /* Typeahead base styles */
